// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trade ship scenarios > a thousand ports each, giant map 1`] = `
{
  "a": {
    "arrivalsPerMinute": 145.6,
    "goldPerMinute": 62870000,
    "shipsArrived": 1456,
    "shipsSent": 1508,
    "tradeGold": 628676951n,
  },
  "b": {
    "arrivalsPerMinute": 135.9,
    "goldPerMinute": 62870000,
    "shipsArrived": 1359,
    "shipsSent": 1453,
    "tradeGold": 628676951n,
  },
  "goldPerTrade": 223300,
}
`;

exports[`trade ship scenarios > across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 5.4,
    "goldPerMinute": 844300,
    "shipsArrived": 27,
    "shipsSent": 32,
    "tradeGold": 4221646n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 844300,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 4221646n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > across the ocean, level-3 port 1`] = `
{
  "a": {
    "arrivalsPerMinute": 15.2,
    "goldPerMinute": 1558000,
    "shipsArrived": 76,
    "shipsSent": 86,
    "tradeGold": 7788209n,
  },
  "b": {
    "arrivalsPerMinute": 6.2,
    "goldPerMinute": 1558000,
    "shipsArrived": 31,
    "shipsSent": 37,
    "tradeGold": 7788209n,
  },
  "goldPerTrade": 72790,
}
`;

exports[`trade ship scenarios > fifty ports each, long route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 75.15,
    "goldPerMinute": 22930000,
    "shipsArrived": 501,
    "shipsSent": 771,
    "tradeGold": 152882704n,
  },
  "b": {
    "arrivalsPerMinute": 80.85,
    "goldPerMinute": 22930000,
    "shipsArrived": 539,
    "shipsSent": 820,
    "tradeGold": 152882704n,
  },
  "goldPerTrade": 147000,
}
`;

exports[`trade ship scenarios > long haul 1`] = `
{
  "a": {
    "arrivalsPerMinute": 3.6,
    "goldPerMinute": 1093000,
    "shipsArrived": 24,
    "shipsSent": 38,
    "tradeGold": 7287549n,
  },
  "b": {
    "arrivalsPerMinute": 4.05,
    "goldPerMinute": 1093000,
    "shipsArrived": 27,
    "shipsSent": 43,
    "tradeGold": 7287549n,
  },
  "goldPerTrade": 142900,
}
`;

exports[`trade ship scenarios > short coastal hop 1`] = `
{
  "a": {
    "arrivalsPerMinute": 7,
    "goldPerMinute": 70270,
    "shipsArrived": 35,
    "shipsSent": 36,
    "tradeGold": 351365n,
  },
  "b": {
    "arrivalsPerMinute": 7,
    "goldPerMinute": 70270,
    "shipsArrived": 35,
    "shipsSent": 37,
    "tradeGold": 351365n,
  },
  "goldPerTrade": 5020,
}
`;

exports[`trade ship scenarios > ten ports each across the ocean 1`] = `
{
  "a": {
    "arrivalsPerMinute": 43.6,
    "goldPerMinute": 7967000,
    "shipsArrived": 218,
    "shipsSent": 257,
    "tradeGold": 39836229n,
  },
  "b": {
    "arrivalsPerMinute": 42,
    "goldPerMinute": 7967000,
    "shipsArrived": 210,
    "shipsSent": 249,
    "tradeGold": 39836229n,
  },
  "goldPerTrade": 93080,
}
`;

exports[`trade ship scenarios > ten ports, ~500-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 39.6,
    "goldPerMinute": 8242000,
    "shipsArrived": 198,
    "shipsSent": 249,
    "tradeGold": 41209433n,
  },
  "b": {
    "arrivalsPerMinute": 39.4,
    "goldPerMinute": 8242000,
    "shipsArrived": 197,
    "shipsSent": 240,
    "tradeGold": 41209433n,
  },
  "goldPerTrade": 104300,
}
`;

exports[`trade ship scenarios > ten ports, ~1800-tile route 1`] = `
{
  "a": {
    "arrivalsPerMinute": 26.7,
    "goldPerMinute": 9096000,
    "shipsArrived": 267,
    "shipsSent": 374,
    "tradeGold": 90959650n,
  },
  "b": {
    "arrivalsPerMinute": 27.4,
    "goldPerMinute": 9096000,
    "shipsArrived": 274,
    "shipsSent": 388,
    "tradeGold": 90959650n,
  },
  "goldPerTrade": 168100,
}
`;

exports[`train scenarios > external city in the cluster 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 335000n,
  "aGoldPerMinute": 67000,
  "aSelfTradeGold": 335000n,
  "bExternalTradeGold": 225000n,
  "bGoldDelta": 225000n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > factory and four cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 190000n,
  "aGoldPerMinute": 38000,
  "aSelfTradeGold": 190000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 133,
}
`;

exports[`train scenarios > factory and one city 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 200000n,
  "aGoldPerMinute": 40000,
  "aSelfTradeGold": 200000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 140,
}
`;

exports[`train scenarios > two factories and two cities 1`] = `
{
  "aExternalTradeGold": 0n,
  "aGoldDelta": 260000n,
  "aGoldPerMinute": 52000,
  "aSelfTradeGold": 260000n,
  "bExternalTradeGold": 0n,
  "bGoldDelta": 0n,
  "trainUnitsSeen": 238,
}
`;
